# eos

./: .gitignore  .gitmodules  Cargo.toml  DELETE.gd  DELETE.tscn  Eos2.csproj  Eos2.sln  Makefile  README.md  SConstruct  bc-common.code-workspace  bc-data.code-workspace  cargo.toml  client-bc-data.code-workspace  compile_commands.json  icon.svg.import  launch.sh  metascape-client.code-workspace  metascape-common.code-workspace  project.godot  server.code-workspace  shell.nix  workspace.code-workspace
.cargo/: config.toml
battlescape/: Cargo.toml
battlescape/benches/: bytes_sum.rs
battlescape/src/: bc_client.rs  bc_event.rs  commands.rs  data.rs  fleet.rs  hull.rs  hull_queue.rs  lib.rs  physics.rs  player_inputs.rs  replay.rs  ship.rs  state_init.rs
battlescape/src/hull/: defence.rs  mod.rs
battlescape/src/physics/: group.rs  mod.rs  shape.rs  user_data.rs
battlescape/src/schedule/: apply_commands.rs  mod.rs
battlescape/src/ship/: mobility.rs  mod.rs
client/: Cargo.toml  control.gd  control.tscn  icon.svg.import  project.godot
client-godot/rust/: Cargo.toml
client-godot/rust/examples/: hasher.rs  matchyaml.rs
client-godot/rust/src/: client.rs  configs.rs  connection_manager.rs  constants.rs  debug_infos.rs  godot_logger.rs  input_handler.rs  lib.rs  metasacpe_manager.rs  metascape_runner.rs  time_manager.rs
client-godot/rust/tests/: matrix_are_hard.rs
client-macroquad/: Cargo.toml
client-macroquad/src/: config.rs  logger.rs  main.rs  prelude.rs  state.rs  time_manager.rs  utils.rs
client-old/rust/: Cargo.toml
client-rust/: Cargo.toml
client-rust/.cargo/: config.toml
client-rust/src/: client.rs  connection_wrapper.rs  constants.rs  draw.rs  godot_client_config.rs  godot_logger.rs  lib.rs  shared.rs  time_manager.rs  util.rs
client/.cargo/: config.toml
client/core/: data.gd  fleet.gd  pixel.png.import
client/data/: data.tscn  instances.json  simulations_map.tscn
client/examples/: quad.rs
client/godot/: project.godot
client/rust/: Cargo.toml
client/singleton/: server_connection.gd
client/src/: camera.rs  main.rs  mpm.rs  shader.wgsl  util.rs
client/tool/: entity_editor.gd  parse_data.gd  parse_data.tscn  server_data.json
common/: Cargo.toml
common/examples/: bufstream.rs  factions_yaml.rs  indexmap.rs  overflow.rs
common/src/: _metascape_new.rs  array_difference.rs  collider.rs  collision.rs  collision_old_grid.rs  compressed_vec2.rs  connection.rs  connection_manager.rs  data_manager.rs  ecs_components.rs  ecs_events.rs  ecs_systems.rs  factions.rs  fleet.rs  fleet_ai.rs  fleet_movement.rs  generation.rs  id.rs  idx.rs  intersection.rs  lib.rs  metascape.rs  metascape_configs.rs  metascape_new.rs  metascape_system.rs  orbit.rs  packets.rs  parameters.rs  position.rs  rand_vector.rs  recyclable_container.rs  reputation.rs  res_clients.rs  res_factions.rs  res_fleets.rs  res_parameters.rs  res_time.rs  res_times.rs  runtime.rs  server.rs  (+14 more)
common/tests/: test_connection.rs
editor/rust/: Cargo.toml
eos-client/rust/: Cargo.toml
eos-common/: Cargo.toml
eos-common/benches/: bench.rs
eos-common/examples/: bytes.rs  serde.rs  vec.rs
eos-common/src/: connection_manager.rs  const_var.rs  data.rs  idx.rs  lib.rs  location.rs  math.rs  packet_common.rs  packet_login.rs  packet_mod.rs
eos-common/tests/: client_global_packet.rs  client_local_packet.rs  connection_manager.rs  location.rs
eos-server/: Cargo.toml
eos-server/.cargo/: config.toml
eos-server/examples/: bandwidth-usage.rs  bench_connection  bench_connection.rs  buffer-len-capacity.rs  client-hello.rs  raw-pointer.rs  rotate.rs
eos-server/src/: command.rs  ecs.rs  ecs_component.rs  ecs_resoure.rs  ecs_system.rs  ecs_world.rs  global.rs  login.rs  main.rs
extension/: Cargo.toml
extension/examples/: rotation.rs
extension/src/: client.rs  client_config.rs  data.rs  data_builder.rs  lib.rs  player_inputs.rs  time_manager.rs  util.rs
metascape/: Cargo.toml
metascape/src/: command.rs  configs.rs  id_dispenser.rs  lib.rs
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/examples/: angle.rs  compress_7bits.rs  iter_enum.rs  makeyaml.rs  matchyaml.rs  serialize_packet.rs  udp.rs
rust/src/: battlescape.rs  battlescape_components.rs  battlescape_input.rs  battlescape_resources.rs  battlescape_schedue.rs  battlescape_systems.rs  chunk.rs  chunk_generator.rs  client.rs  config.rs  constants.rs  def.rs  ecs.rs  ecs_components.rs  ecs_input.rs  ecs_render_pipeline.rs  ecs_resources.rs  ecs_schedue.rs  ecs_systems.rs  game.rs  game_def.rs  godot_ecs.rs  godot_game.rs  godot_logger.rs  godot_mod_manager.rs  input_handler.rs  lib.rs  mod_manager.rs  networking.rs  range.rs  render_pipeline.rs  runner.rs  singleton_config_manager.rs  singleton_mod_manager.rs  time_manager.rs  universe.rs  utils.rs  world.rs  yaml_components.rs
rust/tests/: file.rs  gd_test_main.rs  matrix_are_hard.rs  modulo.rs
server/: Cargo.toml  factions.yaml  hull_server.tscn
server/.cargo/: config.toml
server/benches/: dedup_vs_hashset.rs
server/common/: Cargo.toml
server/examples/: array_difference.rs  bufstream.rs  query_order.rs  recursive_clone.rs
server/script/: hull.gd
server/src/: _connection_noblock.rs  client_connection.rs  clients_manager.rs  collision.rs  colony.rs  connection.rs  connection_manager.rs  data.rs  data_manager.rs  database.rs  ecs_components.rs  ecs_events.rs  ecs_systems.rs  fleets_manager.rs  generation.rs  godot_encoding.rs  id.rs  ids.rs  instance.rs  intersection.rs  interval.rs  logger.rs  main.rs  master_server.rs  res_clients.rs  res_factions.rs  res_fleets.rs  res_parameters.rs  res_system.rs  runner.rs  server.rs  server_configs.rs  simulation_server.rs  small_id_dispenser.rs  terminal.rs
server/tests/: entity_gen.rs
simulation/: Cargo.toml
simulation/examples/: signum.rs
simulation/src/: command.rs  lib.rs  render_event.rs  sim_events.rs
strategyscape/: Cargo.toml
strategyscape/src/: collision.rs  connection_manager.rs  generation.rs  lib.rs  packets.rs  server.rs
system-editor/rust/: Cargo.toml
utils/utils/: Cargo.toml
(+1033 files in other folders)
