[package]
name = "battlescape"
version = "0.1.0"
authors = ["indubitablement2 <jeanmichel88@hotmail.com>"]
edition = "2021"

[dependencies]
log = { version = "0.4.17", features = ["release_max_level_off"] }
bitflags = "1.3.2"
num_enum = "0.5.7"
smallvec = { version = "1.10.0", features = ["union", "serde"] }

common = { path = "../common" }

rand = { version = "0.8.5", features = ["nightly", "serde"] } #, "simd_support"
rand_xoshiro = {version = "0.6.0", features = ["serde1"]}

crossbeam = "0.8.2"

ahash = "0.8.0"
crc32fast = "1.3.2"

serde = { version = "1.0.145", features = ["derive"] }
bincode = "1.3.3"

# Physic and deterministic math.
nalgebra = { version = "0.31.1", features = ["libm-force", "serde-serialize"] }
rapier2d = { version = "0.15.0", features = ["enhanced-determinism", "serde-serialize"] }
