[package]
name = "battlescape"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils/utils" }
data = { path = "../data" }

log = { version = "0.4.17" }
bitflags = "1.3.2"
num_enum = "0.5.7"

rand = { version = "0.8.5", features = ["nightly"] }

crossbeam = "0.8.2"

once_cell = "1.15.0"
ahash = "0.8.0"
indexmap = "1.9.1"
smallvec = { version = "1.10.0", features = ["union", "serde"] }

serde = { version = "1.0.145", features = ["derive"] }
bincode = "1.3.3"

# Physic and deterministic math.
nalgebra = { version = "0.31.2", features = ["libm-force", "serde-serialize"] }
rapier2d = { version = "0.15.0", features = ["enhanced-determinism", "serde-serialize"] }