[package]
name = "client-macroquad"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.17", features = ["release_max_level_warn"] }

macroquad = "0.3.24"
egui = "0.19.0"
egui-macroquad = "0.12.0"

battlescape = { path = "../battlescape" }
data = { path = "../data" }

tokio = { version = "1.21.2", features = ["full"] }

crossbeam = "0.8.2"
parking_lot = "0.12.1"

ahash = "0.8.0"
bytemuck = { version = "1.12.1", features = [ "derive" ] }

serde = { version = "1.0.145", features = ["derive"] }

nalgebra = { version = "0.31.2", features = ["libm-force", "serde-serialize", "convert-glam021"] }
glam = {version = "0.21.0", features = ["serde"] }

[profile.dev.package.'*']
opt-level = 3