[package]
name = "client"
version = "0.1.0"
authors = ["indubitablement2 <jeanmichel88@hotmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = { version = "0.4.17" }
bitflags = "1.3.2"
num_enum = "0.5.7"
smallvec = { version = "1.10.0", features = ["union", "serde"] }

# common = { path = "../../common" }
# utils = { path = "../../utils/utils" }
# battlescape = { path = "../../battlescape"}
# metascape = { path = "../../metascape" }

gdnative = { git = "https://github.com/godot-rust/godot-rust.git", features = ["serde"] }

rand = { version = "0.8.5", features = ["nightly", "serde1"] }
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }

rayon = "1.5.3"
crossbeam = "0.8.2"

ahash = "0.8.0"
bytemuck = { version = "1.12.1", features = [ "derive" ] }

serde = { version = "1.0.145", features = ["derive"] }
bincode = "1.3.3"

# Physic and deterministic math.
rapier2d = { version = "0.15.0", features = ["enhanced-determinism", "serde-serialize"] }
nalgebra = { version = "0.31.2", features = ["libm-force", "serde-serialize"] }

# Non deterministic math.
# glam = { version = "0.21.3", features = ["serde", "rand"] }
