[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.26.1"
wgpu = "0.13.1"
image = "0.24.2"

log = { version = "0.4.17", features = ["release_max_level_off"] }

common = { path = "../common" }
utils = { path = "../utils/utils" }
battlescape = { path = "../battlescape"}
metascape = { path = "../metascape" }

rand = { version = "0.8.5", features = ["nightly", "simd_support"] }

crossbeam = "0.8.1"

ahash = "0.7.6"
crc32fast = { version = "1.3.2", features = ["nightly"] }
bytemuck = { version = "1.10.0", features = [ "derive" ] }

serde = { version = "1.0.138", features = ["derive"] }
bincode = "1.3.3"

tokio = { version = "1.19.2", features = ["full"] }

# For packing sprites into a sprite sheet.
rectangle-pack = "0.4.2"

# Deterministic math.
nalgebra = { version = "0.31.0", features = ["libm-force", "serde-serialize"] }
# Non deterministic math.
glam = { version = "0.21.2", features = ["serde", "rand"] }

[profile.release-lto]
inherits = "release"
lto = true