[package]
name = "common"
version = "0.3.0"
edition = "2021"

[dependencies]
log = { version = "0.4.17" }

serde = { version = "1.0.145", features = ["derive"] }
bincode = "1.3.3"

nalgebra = { version = "0.31.2", features = ["serde-serialize", "libm-force"] }

ahash = {version = "0.8.0", features = ["serde"] }

rand = { version = "0.8.5", features = ["nightly"] } #, "simd_support"
# rand_xoshiro = {version = "0.6.0", features = ["serde"]}

tokio = { version = "1.21.2", features = ["full"] }
crossbeam = "0.8.2"

bytemuck = { version = "1.12.1", features = [ "derive" ] }

utils = { path = "../utils/utils" }
acc = { path = "../acc" }