[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4" }

nalgebra = { version = "0.32", features = ["serde-serialize"] }

serde = { version = "1.0", features = ["derive"] }
bytes = "1.5"

tokio = { version = "1.33", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
