[package]
name = "eos_common"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"

crossbeam-channel = "0.5.1"
tokio = { version = "1.8.1", features = ["full"]}
parking_lot = "0.11.1"

glam = { version = "0.17.1", features = ["serde"] }
# nalgebra is not efficiently serialized.
# nalgebra = { version = "0.28.0", features = ["serde-serialize"]}
bytes = "1.0.1"

bincode = "1.3.3"
serde = { version = "1.0.126", features = ["derive"] }
ahash = "0.7.4"

rand = "0.8.4"

steamworks = { git = "https://github.com/Noxime/steamworks-rs.git", features = ["serde"] }
