[package]
name = "client"
version = "0.8.0"
authors = ["indubitablement2 <jeanmichel88@hotmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdextension", branch = "master" }

rapier2d = { version = "0.17.1", features = ["enhanced-determinism", "serde-serialize"] }
glam = { version = "0.22.0", features = ["serde"] }

log = { version = "0.4.17" }

# bitflags = "1.3.2"
# num_enum = "0.5.7"
ahash = { version = "0.8.3", features = ["serde"] }
indexmap = "1.9.2"
smallvec = { version = "1.10.0", features = ["union", "serde"] }

rand = "0.8.5"
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }

# bytemuck = { version = "1.12.3", features = [ "derive" ] }
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
crc32fast = "1.3.2"

# rayon = "1.5.3"
# crossbeam = "0.8.2"
# parking_lot = "0.12.1"
# once_cell = "1.15.0"

[profile.dev.package.'*']
opt-level = 3
[profile.release]
lto = "thin"
