[package]
name = "metascape"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.17", features = ["release_max_level_info"] }

common = { path = "../common" }
battlescape = { path = "../battlescape"}
utils = { path = "../utils/utils" }
soa_derive = { path = "../utils/soa_derive" }

ahash = {version = "0.7.6", features = ["serde"] }
crc32fast = { version = "1.3.2", features = ["nightly"] }
bytemuck = { version = "1.10.0", features = [ "derive" ] }
bit-vec = { version = "0.6.3", features = ["serde"] }

num_enum = "0.5.7"

serde = { version = "1.0.138", features = ["derive"] }
serde-big-array = "0.4.1"
bincode = "1.3.3"
serde_yaml = "0.8.24"

rand = { version = "0.8.5", features = ["nightly", "simd_support"] }
rand_xoshiro = "0.6.0"
weighted_rand = "0.3.2"

glam = { version = "0.21.2", features = ["serde", "rand"] }

rayon = "1.5.3"

crossbeam = "0.8.1"

