[package]
name = "chaos_cascade"
version = "0.1.0"
authors = ["indubitablement2 <jeanmichel88@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# gdnative = {version = "0.9.3"}
gdnative = { path = "../../godot-rust-2sept/gdnative" }
bevy_ecs = "0.5.0"

simdnoise = "3.1.6"
rand = "0.8.4"

crossbeam-channel = "0.5.1"
parking_lot = "0.11.2"
bincode = "1.3.3"
bytes = "1.1.0"
serde = { version = "1.0.130", features = ["derive"] }
ahash = "0.7.4"

rapier2d = { version = "0.11.1", features = ["enhanced-determinism", "serde-serialize"]}
nalgebra = { version = "0.29.0", features = ["serde-serialize"]}