[package]
name = "chaos_cascade"
version = "0.1.0"
authors = ["indubitablement2 <jeanmichel88@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# gdnative = {version = "0.9.3"}
gdnative = { git = "https://github.com/godot-rust/godot-rust.git", rev = "976ca4676ffe4b97f381473926ef8d9a595ea599" }
bevy_ecs = "0.5.0"
# bevy_reflect = "0.5.0"
# bevy_scene = "0.5.0"

# simdnoise = "3.1.6"
rand = { version = "0.8.4", features = ["nightly", "simd_support"] }

crossbeam-channel = "0.5.1"
# parking_lot = "0.11.2"
ahash = "0.7.4"
indexmap = {version = "1.7.0", features = ["serde"] }

serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
serde_yaml = "0.8.21"
# serde_json = "1.0.68"

bytes = "1.1.0"

# For packing sprites into a sprite sheet.
crunch = "0.3.3"

# rapier2d = { version = "0.11.1", features = ["enhanced-determinism", "serde-serialize"] }
nalgebra = { version = "0.29.0", features = ["serde-serialize"] }

glam = { version = "0.19.0", features = ["serde", "rand"] }