[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_info",
] }

# broccoli = "6.3"
rapier2d = { version = "0.17", features = ["serde-serialize"] }
approx = "0.5"

ahash = { version = "0.8", features = ["serde"] }
indexmap = { version = "2.0", features = ["serde"] }

rand = "0.8"
rand_xoshiro = { version = "0.6", features = ["serde1"] }
const-random = "0.1"

serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
bytes = "1.5"

tokio = { version = "1.33", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
# axum = "0.6"
# reqwest = { version = "0.11", features = ["json"] }
