[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_info",
] }

chrono = "0.4"

anyhow = "1.0"

# broccoli = "6.3"
rapier2d = { version = "0.17", features = ["serde-serialize", "simd-stable"] }
approx = "0.5"

ahash = { version = "0.8", features = ["serde"] }
indexmap = { version = "2.0", features = ["serde"] }
smallvec = { version = "1.11", features = ["serde", "union"] }
# dashmap = { version = "5.5", features = ["serde", "inline"] }

rand = "0.8"
# rand_xoshiro = { version = "0.6", features = ["serde1"] }

serde = "1.0"
serde_json = "1.0"
postcard = { version = "1.0", features = [
    "use-std",
    "experimental-derive",
], default-features = false }
bytes = "1.5"

rayon = "1.8"
parking_lot = { version = "0.12", features = ["nightly"] }
crossbeam-channel = "0.5"

tokio = { version = "1.33", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
# axum = "0.6"
# reqwest = { version = "0.11", features = ["json"] }

[features]
database = []
instance = []
default = ["database", "instance"]

[profile.release]
# codegen-units = 1
lto = "thin"

[build]
rustflags = ["-C", "target-cpu=native"]
