[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
rapier2d = { version = "0.16.1", features = ["enhanced-determinism", "serde-serialize"] }

serde = { version = "1.0.147", features = ["derive"] }
bincode = "1.3.3"

ahash = { version = "0.8.2", features = ["serde"] }
indexmap = "1.9.1"
smallvec = { version = "1.10.0", features = ["union", "serde"] }

rand = { version = "0.8.5", features = ["nightly"] }
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }

log = { version = "0.4.17" }

num_enum = "0.5.7"
