[package]
name = "strategyscape"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.14", features = ["release_max_level_off"] }

rand = { version = "0.8.4", features = ["nightly", "simd_support"] }
rand_xoshiro = "0.6.0"

# ahash = "0.7.4"
indexmap = {version = "1.7.0", features = ["serde"] }

# serde = { version = "1.0.130", features = ["derive"] }
# bincode = "1.3.3"
# serde_yaml = "0.8.21"

rapier2d = "0.11.1"

crossbeam-channel = "0.5.1"
tokio = { version = "1.13.0", features = ["full"] }
bytes = "1.1.0"