[package]
name = "eos"
version = "0.1.0"
authors = ["indubitablement2 <jeanmichel88@hotmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = { version = "0.4.17", features = ["release_max_level_off"] }

num_enum = "0.5.7"

common = { path = "../../common" }
utils = { path = "../../utils/utils" }
battlescape = { path = "../../battlescape"}
metascape = { path = "../../metascape" }

gdnative = { git = "https://github.com/godot-rust/godot-rust.git" }

rand = { version = "0.8.5", features = ["nightly", "simd_support"] }
rand_xoshiro = "0.6.0"

crossbeam = "0.8.1"

ahash = "0.7.6"
bytemuck = { version = "1.10.0", features = [ "derive" ] }

serde = { version = "1.0.138", features = ["derive"] }
bincode = "1.3.3"

tokio = { version = "1.19.2", features = ["full"] }

# For packing sprites into a sprite sheet.
crunch = "0.3.3"

# Physic and deterministic math.
nalgebra = { version = "0.31.0", features = ["libm-force", "serde-serialize"] }

# Non deterministic math.
glam = { version = "0.21.2", features = ["serde", "rand"] }
