[package]
name = "eos"
version = "0.1.0"
authors = ["indubitablement2 <jeanmichel88@hotmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = { version = "0.4.14", features = ["release_max_level_off"] }
anyhow = "1.0.57"

common = { path = "../../common" }
utils = { path = "../../utils/utils" }
battlescape = { path = "../../battlescape"}

gdnative = { git = "https://github.com/godot-rust/godot-rust.git" }

rand = { version = "0.8.4", features = ["nightly", "simd_support"] }
rand_xoshiro = "0.6.0"
weighted_rand = "0.3.2"

crossbeam = "0.8.1"
# parking_lot = "0.11.2"

ahash = "0.7.6"

serde = { version = "1.0.133", features = ["derive"] }
bincode = "1.3.3"
serde_yaml = "0.8.23"

tokio = { version = "1.15.0", features = ["full"] }

# For packing sprites into a sprite sheet.
crunch = "0.3.3"

# Physic and deterministic math.
nalgebra = { version = "0.29.0", features = ["libm-force", "serde-serialize"] }
rapier2d = { version = "0.11.1", features = ["enhanced-determinism", "serde-serialize"] }

# Non deterministic math.
glam = { version = "0.20.2", features = ["serde", "rand"] }
