[package]
name = "editor"
version = "0.1.0"
authors = ["indubitablement2 <jeanmichel88@hotmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
common = { path = "../../common" }

gdnative = { git = "https://github.com/godot-rust/godot-rust.git", rev = "25603b047364cde1ab1267cb41579a2734ab01d5" }

rand = { version = "0.8.4", features = ["nightly", "simd_support"] }
rand_xoshiro = "0.6.0"

ahash = "0.7.6"
indexmap = {version = "1.8.0", features = ["serde"] }

serde = { version = "1.0.133", features = ["derive"] }
bincode = "1.3.3"
serde_yaml = "0.8.23"

glam = { version = "0.20.2", features = ["serde", "rand"] }
