[package]
name = "editor"
version = "0.1.0"
authors = ["indubitablement2 <jeanmichel88@hotmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
common = { path = "../../common" }
utils = { path = "../../utils/utils" }

gdnative = { git = "https://github.com/godot-rust/godot-rust.git" }

rand = { version = "0.8.4", features = ["nightly", "simd_support"] }
rand_xoshiro = "0.6.0"
weighted_rand = "0.3.2"

ahash = "0.7.6"

serde = { version = "1.0.138", features = ["derive"] }
bincode = "1.3.3"

glam = { version = "0.21.2", features = ["serde", "rand"] }
