[package]
name = "eos_client"
version = "0.1.0"
authors = ["indubitablement2 <jeanmichel88@hotmail.com>"]
edition = "2018"

# [build-dependencies]
# bindgen = "0.59.1"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
gdnative = { path = "../../godot-rust/gdnative" }
# gdnative = "0.9.3"

eos_common = { path = "../../eos-common" }

flume = "0.10.8"
hex = "0.4.3"
