[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.14" }

serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
# serde_yaml = "0.8.21"
# serde_json = "1.0.69"

glam = { version = "0.20.0", features = ["serde", "rand"] }
# bytes = "1.1.0"
